client/src/modules/components/ReportRenderer/ReportRenderer.scss
.ReportRenderer {
  display: flex;
  flex-grow: 1;
  flex-direction: row;
  height: 0;

  .component {
    display: flex;
    flex-grow: 1;
    max-width: calc(100% - 175px);
    position: relative;
    flex-direction: column;
    overflow: auto;

    &:only-child {
      max-width: 100%;
    }
  }

  .additionalInfo {
    display: flex;
    flex-grow: 0;
    flex-direction: column;
    font-size: 1.4em;
    padding-top: 0.5em;
    text-align: center;
    border-left: 1px solid lightgray;
    width: 175px;
  }
}

